@@ -55,6 +55,31 @@ static void do_exec(void)
   _exit(1);
 }
 
+static void cmd_capa(void)
+{
+  static str auth_resp;
+  int sasl;
+
+  if ((sasl = sasl_auth_caps(&auth_resp)) == -1
+      || (sasl == 1 && auth_resp.len <= 5)) {
+    respond(err_internal);
+    return;
+  }
+  respond(ok);
+  if (sasl) {
+    obuf_puts(&outbuf, "SASL ");
+    obuf_write(&outbuf, auth_resp.s + 5, auth_resp.len - 5);
+    obuf_puts(&outbuf, CRLF);
+  }
+  obuf_puts(&outbuf, "TOP");
+  obuf_puts(&outbuf, CRLF);
+  obuf_puts(&outbuf, "UIDL");
+  obuf_puts(&outbuf, CRLF);
+  obuf_puts(&outbuf, "USER");
+  obuf_puts(&outbuf, CRLF);
+  respond(".");
+}
+
 static void cmd_auth_none(void)
 {
   static str auth_resp;
@@ -124,6 +149,7 @@ static void cmd_quit(void)
 }
 
 command commands[] = {
+  { "CAPA", cmd_capa,      0,        0 },
   { "AUTH", cmd_auth_none, cmd_auth, 0 },
   { "PASS", 0,             cmd_pass, "PASS XXXXXXXX" },
   { "QUIT", cmd_quit,      0,        0 },
